# SimpleHTTPServer

./: .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/RESTServer/: CMakeLists.txt
example/RESTServer/src/: main.cpp
include/: HTTPHeader.hpp  HTTPRequest.hpp  HTTPResponse.hpp  HTTPServer.hpp  RESTServer.hpp
include/Tools/: Network.hpp  SocketTools.hpp
libraries/: CMakeLists.txt
src/: HTTPHeader.cpp  HTTPRequest.cpp  HTTPResponse.cpp  HTTPServer.cpp  RESTServer.cpp
src/Tools/: SocketTools.cpp
tests/: CMakeLists.txt  HTTPHeader.cpp  HTTPRequest.cpp  HTTPResponse.cpp  main.cpp
